[package]
name = "rust_predict"
version = "0.1.0"
authors = ["Conner Ebbinghaus <connerebbinghaus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tle={git="https://github.com/pbrandt1/rust-tle.git"}
chrono = "0.4"

[dev-dependencies]
assert_approx_eq = "1.1"
# criterion = "0.3"

# [[bench]]
# name = "predict"
# harness = false